    transaction. emaj_start_groups, emaj_stop_groups, emaj_set_mark_groups, 
    emaj_rollback_groups, emaj_logged_rollback_groups and 
    emaj_rollback_and_stop_groups take as first argument an array of group 
    names.
  - in parallel rollback processing, "subgroups" are now named "sessions" 
    to avoid confusion in multi-groups rollbacks.
  - in emaj_estimate_rollback_duration(), check that the group is in LOGGING 
    state.
  - in emaj_create_group(), explicitely check that no table or sequence 
    already belong to another created group.
  - in emaj_create_group(), check the supplied group name is not null, not 
    empty and don't contain any ',' character.
  - in emaj_hist table, add a column containing the id of the insertion 
    transaction. 
  - a new emaj_find_previous_mark_group() function returns the name of the 
    mark that immediately precedes a given date and time for a group.
  - a comment has been added to all E-Maj tables, types and roles, as well 
    as to all functions callable by users.
  - in emaj_log_stat_group() and emaj_detailed_log_stat_group(), empty 
    strings can be supplied as mark names. In such a case, there are 
    processed as NULL values.

Bug fixes:
  - during emaj_start_group() avoid double lock of tables and reoder events
    in the emaj_hist table.
  - in emaj_verify_all() function, add a check on orphan truncate functions.
  - a missing check has been added in internal _verify_group() function.

0.9.1
-----
Enhancements:
  - emaj_snap_group(): avoid setting explicit locks on tables because it is 
    not necessary to get a coherent image of all tables of the group.
  - the emaj_log_stat_group() function has been refactored. A new internal 
    _log_stat_table() function has been created.
  - the group_creation_datetime column of the emaj_group table is now 
    initialized with the transaction timestamp instead of the clock timestamp.
  - main functions set a lock on the emaj_group row representing the working 